--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" />
   <link rel="stylesheet" href="main.css" />
   <style>
-    /* YouTube iframe fill */
     .youtube-embed {
       position: relative;
       padding-bottom: 56.25%;
@@ -25,45 +24,17 @@
       width: 100%;
       height: 100%;
     }
-
-    /* Align first row columns at the top across all screens */
-    .row.align-columns {
-      display: flex;
-      flex-wrap: wrap;
-      align-items: flex-start;
-    }
-
-    .row.align-columns > div {
-      display: flex;
-      flex-direction: column;
-      justify-content: flex-start;
-      padding-top: 120px; /* Push columns below navbar */
-    }
-
-    /* Prevent stacking issues */
-    .our-mission-wrapper,
-    .find-us-wrapper,
-    .meet-founder-wrapper {
-      min-height: 100%;
-      margin-top: 0 !important;
-    }
-
-    /* Mobile */
-    @media (max-width: 575.98px) {
-      .top-row {
-        flex-direction: column;
-        padding-top: 100px;
-      }
-    }
   </style>
 </head>
-<body>
+<body style="background-color: #f4f4f4;">
+  <!-- Navbar -->
   <div id="nav-placeholder"></div>
 
-  <div class="container">
-    <!-- Top section with three columns -->
-    <div class="row g-4 mb-5 align-columns top-row">
-      <div class="col-lg-4 col-md-6 our-mission-wrapper">
+  <!-- Main Content -->
+  <div class="container mt-5">
+    <div class="row g-4 mb-5">
+      <!-- Our Mission -->
+      <div class="col-lg-4 col-md-6">
         <div class="section-card">
           <h3>Our Mission</h3>
           <p>We are an educational establishment focused on long-term individual player development.</p>
@@ -73,16 +44,20 @@
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-6 find-us-wrapper">
+      <!-- Facebook Feed -->
+      <div class="col-lg-4 col-md-6">
         <div class="section-card">
-          <h3>Find Us</h3>
-          <div class="ratio ratio-4x3">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!..." width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+          <h3>Our Facebook</h3>
+          <div class="fb-page" data-href="https://www.facebook.com/yourpage" data-tabs="timeline" data-width="" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
+            <blockquote cite="https://www.facebook.com/yourpage" class="fb-xfbml-parse-ignore">
+              <a href="https://www.facebook.com/yourpage">Your Page Name</a>
+            </blockquote>
           </div>
         </div>
       </div>
 
-      <div class="col-lg-4 col-md-12 meet-founder-wrapper">
+      <!-- Meet Our Founder -->
+      <div class="col-lg-4 col-md-12">
         <div class="section-card text-center d-flex flex-column align-items-center">
           <h3>Meet Our Founder</h3>
           <p>Nick has dedicated Foot and Ball Academy to incorporating the latest trends in football education from around the world.</p>
@@ -94,44 +69,7 @@
       </div>
     </div>
 
-    <!-- YouTube and Facebook row -->
+    <!-- YouTube + Find Us Row -->
     <div class="row g-4 mb-5">
       <div class="col-lg-6 col-md-6">
-        <div class="section-card">
-          <h3>Our YouTube</h3>
-          <div class="youtube-embed">
-            <iframe src="https://www.youtube.com/embed/your-video-id" title="YouTube video" allowfullscreen></iframe>
-          </div>
-        </div>
-      </div>
-
-      <div class="col-lg-6 col-md-6">
-        <div class="section-card">
-          <h3>Our Facebook</h3>
-          <div class="fb-page" data-href="https://www.facebook.com/yourpage" data-tabs="timeline" data-width="" data-height="400" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true">
-            <blockquote cite="https://www.facebook.com/yourpage" class="fb-xfbml-parse-ignore">
-              <a href="https://www.facebook.com/yourpage">Your Page Name</a>
-            </blockquote>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <!-- Footer Section Start -->
-  <div id="foot-placeholder"></div>
-  <!-- Footer Section End -->
-
-  <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0"></script>
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script>
-    $(function () {
-      $("#nav-placeholder").load("nav.html");
-      $("#foot-placeholder").load("footer.html");
-    });
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/uikit@3.16.3/dist/js/uikit.min.js"></script>
-</body>
-</html>
+        <div class="sec
