--- a/register.html
+++ b/register.html
@@ -13,13 +13,7 @@
   <title>Foot and Ball Academy</title>
   <style>
     #about {
-      background: url('img/academy.jpg') center center/cover no-repeat;
-      position: relative;
-    }
-
-    #about .inner-overlay {
-      background-color: rgba(0, 0, 0, 0.6);
-      padding: 60px 0;
+      background-color: #f0f4f8;
     }
 
     .card {
@@ -63,13 +57,13 @@
   <!-- Nav Section End -->
 
   <!-- About Section Start -->
-  <section id="about" class="text-center text-light">
-    <div class="inner-overlay">
-      <div class="container">
-        <div class="row">
-          <div class="col mt-5 pt-4">
-            <h1 class="text-light">Register</h1>
-            <p class="lead">Register for one of our programs below.</p>
+  <section id="about" class="py-5">
+    <div class="container">
+      <div class="row justify-content-center">
+        <div class="col-lg-8 text-center">
+          <div class="p-4 rounded" style="background: rgba(255, 255, 255, 0.9);">
+            <h1 class="mb-3">Register</h1>
+            <p class="lead mb-0">Secure your place in one of our upcoming programs below.</p>
           </div>
         </div>
       </div>
@@ -118,11 +112,9 @@
           <div class="card text-center w-100">
             <img src="img/stock6.jpg" class="card-img-top" style="max-height:300px; object-fit:cover;" alt="1-on-1 Sessions">
             <div class="card-body d-flex flex-column">
-              <h2 class="card-title">1-on-1 Sessions</h2>
+              <h2 class="card-title">Private Sessions</h2>
               <p class="card-text">
-                Consult one of our coaches first
-                <a href="PrivateSessions.html" class="link-secondary">Read more...</a>
-              </p>
+                Consult Nick first | P: 0452 583 279</p>
               <a href="https://forms.office.com/r/v87P9vk9n0" target="_blank" class="btn btn-info mt-auto">
                 Register Now
               </a>
