--- a/index.html
+++ b/index.html
@@ -237,26 +237,24 @@
   <div id="foot-placeholder"></div>
 
   <div id="fb-root"></div>
-  <script async defer crossorigin="anonymous"
-    src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="FBSDK"></script>
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="js/uikit.min.js"></script>
-  <script src="js/uikit-icons.min.js"></script>
-  <script>
-  $(function () {
-    $("#nav-placeholder").load("navbar.html", function () {
-      // Delay to ensure DOM is ready
-      setTimeout(function () {
-        document.querySelectorAll('.dropdown-toggle').forEach(function (el) {
-          new bootstrap.Dropdown(el);
-        });
-      }, 100); // 100ms delay
-    });
+ <script async defer crossorigin="anonymous"
+  src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v17.0" nonce="FBSDK"></script>
 
+<script src="js/jquery-3.6.4.min.js"></script>
+<script src="js/popper.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
+
+<script src="js/uikit.min.js"></script>
+<script src="js/uikit-icons.min.js"></script>
+
+<script>
+  $(function () {
+    $("#nav-placeholder").load("navbar.html");
     $("#foot-placeholder").load("footer.html");
   });
-  </script>
+</script>
+
+
 </body>
 
 </html>
